# brain_visualization

./: .gitignore  CMakeLists.txt  README.md
Surface/stl_files/lh/: lh.bankssts.stl  lh.caudalanteriorcingulate.stl  lh.caudalmiddlefrontal.stl  lh.corpuscallosum.stl  lh.cuneus.stl  lh.entorhinal.stl  lh.frontalpole.stl  lh.fusiform.stl  lh.inferiorparietal.stl  lh.inferiortemporal.stl  lh.insula.stl  lh.isthmuscingulate.stl  lh.lateraloccipital.stl  lh.lateralorbitofrontal.stl  lh.lingual.stl  lh.medialorbitofrontal.stl  lh.middletemporal.stl  lh.paracentral.stl  lh.parahippocampal.stl  lh.parsopercularis.stl  lh.parsorbitalis.stl  lh.parstriangularis.stl  lh.pericalcarine.stl  lh.postcentral.stl  lh.posteriorcingulate.stl  lh.precentral.stl  lh.precuneus.stl  lh.rostralanteriorcingulate.stl  lh.rostralmiddlefrontal.stl  lh.superiorfrontal.stl  lh.superiorparietal.stl  lh.superiortemporal.stl  lh.supramarginal.stl  lh.temporalpole.stl  lh.transversetemporal.stl  lh.unknown.stl
Surface/stl_files/rh/: rh.bankssts.stl  rh.caudalanteriorcingulate.stl  rh.caudalmiddlefrontal.stl  rh.corpuscallosum.stl  rh.cuneus.stl  rh.entorhinal.stl  rh.frontalpole.stl  rh.fusiform.stl  rh.inferiorparietal.stl  rh.inferiortemporal.stl  rh.insula.stl  rh.isthmuscingulate.stl  rh.lateraloccipital.stl  rh.lateralorbitofrontal.stl  rh.lingual.stl  rh.medialorbitofrontal.stl  rh.middletemporal.stl  rh.paracentral.stl  rh.parahippocampal.stl  rh.parsopercularis.stl  rh.parsorbitalis.stl  rh.parstriangularis.stl  rh.pericalcarine.stl  rh.postcentral.stl  rh.posteriorcingulate.stl  rh.precentral.stl  rh.precuneus.stl  rh.rostralanteriorcingulate.stl  rh.rostralmiddlefrontal.stl  rh.superiorfrontal.stl  rh.superiorparietal.stl  rh.superiortemporal.stl  rh.supramarginal.stl  rh.temporalpole.stl  rh.transversetemporal.stl  rh.unknown.stl
Surface/stl_files_smooth/lh/: lh.bankssts.smoothed.stl  lh.caudalanteriorcingulate.smoothed.stl  lh.caudalmiddlefrontal.smoothed.stl  lh.cuneus.smoothed.stl  lh.entorhinal.smoothed.stl  lh.frontalpole.smoothed.stl  lh.fusiform.smoothed.stl  lh.inferiorparietal.smoothed.stl  lh.inferiortemporal.smoothed.stl  lh.insula.smoothed.stl  lh.isthmuscingulate.smoothed.stl  lh.lateraloccipital.smoothed.stl  (+22 more)
model/: DTI_processed_ACT_5TTwmmask_seedgmwmi_1M_sift0.1M_RD_mean.txt
viewer/: CMakeLists.txt  PolyLineDataReader.cxx  PolyLineDataReader.h  demoViewer.cpp  scene_Mix.h
(+102 files in other folders)
